--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "redux": "^4.0.5",
     "typescript": "~3.7.2"
   },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
